--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -98,14 +98,22 @@
   padding-left: 10px;
   padding-right: 10px;
 }
-
 /* line 93, ../sass/main.scss */
+.myTable.client-info-tbl td:nth-child(1), .myTable.client-new-trans td:nth-child(1) {
+  font-weight: 600;
+}
+/* line 100, ../sass/main.scss */
+.myTable#client-transactions-table td:nth-child(3), .myTable#client-transactions-table td:nth-child(4), .myTable#client-transactions-table th:nth-child(3), .myTable#client-transactions-table th:nth-child(4) {
+  text-align: right;
+}
+
+/* line 106, ../sass/main.scss */
 .menu-bar {
   background-color: #3f939e;
   border: none;
   border-radius: 0;
 }
-/* line 99, ../sass/main.scss */
+/* line 112, ../sass/main.scss */
 .menu-bar .menu-group .menu-list a {
   color: #fff;
   font-size: 14px;
@@ -113,32 +121,32 @@
   opacity: 0.7;
   text-transform: capitalize;
 }
-/* line 105, ../sass/main.scss */
+/* line 118, ../sass/main.scss */
 .menu-bar .menu-group .menu-list a:hover, .menu-bar .menu-group .menu-list a:focus {
   color: #fff;
   opacity: 0.9;
 }
-/* line 110, ../sass/main.scss */
+/* line 123, ../sass/main.scss */
 .menu-bar .menu-group .menu-list.active a {
   opacity: 1;
   background-color: transparent;
 }
-/* line 119, ../sass/main.scss */
+/* line 132, ../sass/main.scss */
 .menu-bar .navbar-header .navbar-brand {
   color: #fff;
 }
-/* line 122, ../sass/main.scss */
+/* line 135, ../sass/main.scss */
 .menu-bar .navbar-header .icon-bar {
   background-color: #fff;
 }
 
-/* line 128, ../sass/main.scss */
+/* line 140, ../sass/main.scss */
 #navbar {
   padding-left: 0;
   padding-right: 0;
 }
 
-/* line 134, ../sass/main.scss */
+/* line 144, ../sass/main.scss */
 .breadcrumb {
   text-transform: capitalize;
 }
