--- a/assets/styles/sass/main.scss
+++ b/assets/styles/sass/main.scss
@@ -88,7 +88,7 @@ $cyan: #3f939e;
         padding-left: 10px;
         padding-right: 10px;
     }
-    &.client-info-tbl, &.client-new-trans {
+    &.client-info-tbl, &.client-new-loan, &.loan-info-tbl {
         td {
             &:nth-child(1) {
                 font-weight: 600;
