--- a/assets/styles/sass/main.scss
+++ b/assets/styles/sass/main.scss
@@ -95,10 +95,16 @@ $cyan: #3f939e;
             }
         }
     }
-    &#client-transactions-table {
+    &.client-trans-tbl {
         td, th {
-            &:nth-child(3), &:nth-child(4) {
+            &:nth-child(4) {
                 text-align: right;
+            }
+        }
+        tr:last-child {
+            td {
+                font-weight: 600;
+                border-top: dashed 1px $cyan;
             }
         }
     }
