--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -155,3 +155,39 @@
 .breadcrumb {
   text-transform: capitalize;
 }
+
+/* line 155, ../sass/main.scss */
+.client-loans-table {
+  width: 100%;
+}
+/* line 157, ../sass/main.scss */
+.client-loans-table td {
+  width: 25%;
+  padding: 1px 10px;
+}
+
+/* line 163, ../sass/main.scss */
+.subtbl_end {
+  height: 20px;
+  border-top: solid 1px #000;
+}
+
+/* line 168, ../sass/main.scss */
+.transaction-th {
+  padding-top: 10px !important;
+}
+
+/* line 191, ../sass/main.scss */
+.total-payment-label, .interest-label, .balance-label, .loan-value-label, .transaction-no-label, .date-label, .amount-label, .status-label, .transaction-th-date, .transaction-th-amount, .transaction-th-description {
+  font-weight: 600;
+}
+
+/* line 194, ../sass/main.scss */
+.total-payment-data, .interest-data, .balance-data, .loan-value-data, .transaction-th-amount, .transaction-td-amount {
+  text-align: right;
+}
+
+/* line 198, ../sass/main.scss */
+.total-payment-label, .total-payment-data {
+  border-top: dashed 1px #000000;
+}
