--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -158,36 +158,100 @@
 
 /* line 155, ../sass/main.scss */
 .client-loans-table {
-  width: 100%;
+  width: 500px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  padding: 10px;
 }
-/* line 157, ../sass/main.scss */
+/* line 160, ../sass/main.scss */
 .client-loans-table td {
-  width: 25%;
   padding: 1px 10px;
+  font-size: 14px;
 }
-
 /* line 163, ../sass/main.scss */
-.subtbl_end {
-  height: 20px;
-  border-top: solid 1px #000;
+.client-loans-table td:nth-child(1), .client-loans-table td:nth-child(4) {
+  width: 120px;
+}
+/* line 166, ../sass/main.scss */
+.client-loans-table td:nth-child(2), .client-loans-table td:nth-child(3) {
+  width: 100px;
 }
 
-/* line 168, ../sass/main.scss */
+/* line 174, ../sass/main.scss */
+.row-line {
+  height: 1px;
+  background-color: #ccc;
+}
+
+/* line 178, ../sass/main.scss */
+.row-gap {
+  height: 10px;
+  background-color: #f9f9f9;
+}
+
+/* line 182, ../sass/main.scss */
+.subtbl-end {
+  height: 30px;
+  background-color: #fff;
+}
+
+/* line 187, ../sass/main.scss */
 .transaction-th {
   padding-top: 10px !important;
 }
 
-/* line 191, ../sass/main.scss */
-.total-payment-label, .interest-label, .balance-label, .loan-value-label, .transaction-no-label, .date-label, .amount-label, .status-label, .transaction-th-date, .transaction-th-amount, .transaction-th-description {
+/* line 210, ../sass/main.scss */
+.total-payment-label, .balance-label, .loan-value-label, .transaction-th-date, .transaction-th-interest, .transaction-th-amount, .transaction-th-description {
   font-weight: 600;
 }
 
-/* line 194, ../sass/main.scss */
-.total-payment-data, .interest-data, .balance-data, .loan-value-data, .transaction-th-amount, .transaction-td-amount {
+/* line 213, ../sass/main.scss */
+.total-payment-data, .interest-data, .balance-data, .loan-value-data, .transaction-th-interest, .transaction-th-amount, .transaction-td-amount {
   text-align: right;
 }
 
-/* line 198, ../sass/main.scss */
-.total-payment-label, .total-payment-data {
-  border-top: dashed 1px #000000;
+/* line 222, ../sass/main.scss */
+.transaction-no-label {
+  padding-top: 20px !important;
+  font-weight: 600;
+}
+
+/* line 226, ../sass/main.scss */
+.transaction-no-data {
+  padding-top: 20px !important;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+/* line 235, ../sass/main.scss */
+.amount-label {
+  padding-top: 20px !important;
+  text-align: right;
+}
+
+/* line 239, ../sass/main.scss */
+.amount-data {
+  padding-top: 20px !important;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+/* line 244, ../sass/main.scss */
+.status-label {
+  text-align: right;
+}
+
+/* line 247, ../sass/main.scss */
+.status-data {
+  text-transform: uppercase;
+}
+
+/* line 252, ../sass/main.scss */
+.interest-data {
+  font-weight: 600;
+}
+
+/* line 255, ../sass/main.scss */
+.total-payment-data {
+  font-weight: 600;
 }
