--- a/assets/styles/sass/main.scss
+++ b/assets/styles/sass/main.scss
@@ -153,16 +153,35 @@ $cyan: #3f939e;
 
 // Loan form
 .client-loans-table {
-    width: 100%;
+    width: 500px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    padding: 10px;
     td {
-        width: 25%;
         padding: 1px 10px;
+        font-size: 14px;
+        &:nth-child(1), &:nth-child(4) { 
+            width: 120px;
+        }
+        &:nth-child(2), &:nth-child(3) {
+            width: 100px;
+        }
     }
 }
 
-.subtbl_end{
-    height: 20px;
-    border-top: solid 1px #000;
+.subtbl-start{
+}
+.row-line {
+    height: 1px;
+    background-color: #ccc;
+}
+.row-gap {
+    height: 10px;
+    background-color: #f9f9f9;
+}
+.subtbl-end {
+    height: 30px;
+    background-color: #fff;
 }
 
 .transaction-th {
@@ -188,15 +207,53 @@ $cyan: #3f939e;
 .transaction-th-amount {}
 .transaction-th-description {}
 
-.total-payment-label, .interest-label, .balance-label, .loan-value-label, .transaction-no-label, .date-label, .amount-label, .status-label, .transaction-th-date, .transaction-th-amount, .transaction-th-description {
+.total-payment-label, .balance-label, .loan-value-label, .transaction-th-date, .transaction-th-interest, .transaction-th-amount, .transaction-th-description {
     font-weight: 600;
 }
-.total-payment-data, .interest-data, .balance-data, .loan-value-data, .transaction-th-amount, .transaction-td-amount {
+.total-payment-data, .interest-data, .balance-data, .loan-value-data, .transaction-th-interest, .transaction-th-amount, .transaction-td-amount, {
     text-align: right;
 }
 
 .total-payment-label, .total-payment-data {
-    border-top: dashed 1px #000000;
+    
+}
+
+// client loan table header
+.transaction-no-label {
+    padding-top: 20px !important;
+    font-weight: 600;
+}
+.transaction-no-data {
+    padding-top: 20px !important;
+    font-weight: 600;
+    font-size: 16px;
+}
+.date-label {
+}
+.date-data {
+}
+.amount-label {
+    padding-top: 20px !important;
+    text-align: right;
+}
+.amount-data {
+    padding-top: 20px !important;
+    font-size: 16px;
+    font-weight: 600;
+}
+.status-label {
+    text-align: right;
+}
+.status-data {
+    text-transform: uppercase;
+}
+
+// client loan table footer
+.interest-data {
+    font-weight: 600;
+}
+.total-payment-data {
+    font-weight: 600;
 }
 
 
